data/derived/comb/progs/unify/prog5823.ml.out
Characters 75-82:
  | h::t -> (h, l2) :: helper(t, l2);;
                             ^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
